# earnings-call-market-prediction

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.virtual_documents/notebooks/: Untitled.ipynb
api/: main.py
notebooks/: DataExploration.ipynb
scripts/: build_features.py  build_vector_store.py  download_data.py  preprocess_data.py  test_lexicons.py  test_qa.py  train_models.py
src/data/: loader.py  preprocessor.py
src/features/: feature_engineering.py  market_features.py
src/models/: predictive_models.py
src/rag/: document_processor.py  qa_system.py  smart_search.py  vector_store.py
src/utils/: financial_lexicons.py  prompts.py
